@@ -1,3 +1,9 @@
+2006-11-04  Björn Steinbrink  <B.Steinbrink@gmx.de>
+
+	* src/main.cpp: Add a libxml2 init wrapper. Use a null-logger function
+	instead of /dev/null to quieten libxml2. Actually initialize libxml2
+	before using it to load the configuration.
+
 2006-11-02  Björn Steinbrink  <B.Steinbrink@gmx.de>
 
 	* src/gui/register.cpp, src/gui/register.h: Fixed a memory leak and a
